fixed collapsing behaviour of data navigation

--- a/scss/modules/data-navigation.scss
+++ b/scss/modules/data-navigation.scss
@@ -1,5 +1,4 @@
 .data-navigation-container {
-    width: 250px;
     height: 100%;
 }
 
